Got precompiled header to work, maybe

--- a/libraries/common/CMakeLists.txt
+++ b/libraries/common/CMakeLists.txt
@@ -53,7 +53,9 @@ source_group("include" FILES ${include})
 source_group("tcc" FILES ${tcc})
 
 message(STATUS "src: ${src}")
-add_precompiled_header("../windows/include/stdafx.h" "../windows/src/stdafx.cpp" src)
+include_directories("../windows/include")
+# add_precompiled_header("../windows/include/stdafx.h" "../windows/src/stdafx.cpp" src)
+add_precompiled_header("stdafx.h" "../windows/src/stdafx.cpp" src)
 message(STATUS "src2: ${src}")
 add_library(${library_name} ${src} ${include} ${tcc})
 target_include_directories(${library_name} PUBLIC include)
