--- a/tools/trainers/CMakeLists.txt
+++ b/tools/trainers/CMakeLists.txt
@@ -5,3 +5,4 @@
 add_subdirectory(linearTrainer)
 add_subdirectory(forestTrainer)
 add_subdirectory(sweepingSGDTrainer)
+add_subdirectory(protoNNTrainer)
