Fix github page build warning.

--- a/_config.yml
+++ b/_config.yml
@@ -37,7 +37,7 @@ whitelist: []
 
 # Conversion
 markdown:    kramdown
-highlighter: pygments
+highlighter: rouge
 lsi:         false
 excerpt_separator: "\n\n"
 
