Node for Euclidean distance

--- a/libraries/nodes/CMakeLists.txt
+++ b/libraries/nodes/CMakeLists.txt
@@ -20,6 +20,7 @@ set (include include/AccumulatorNode.h
              include/DotProductNode.h
              include/DTWDistanceNode.h
              include/ExtremalValueNode.h
+             include/EuclideanDistanceNode.h
              include/ForestPredictorNode.h
              include/FullyConnectedLayerNode.h
              include/IRNode.h
@@ -79,6 +80,7 @@ set (tcc tcc/AccumulatorNode.tcc
          tcc/DotProductNode.tcc
          tcc/DTWDistanceNode.tcc
          tcc/ExtremalValueNode.tcc
+         tcc/EuclideanDistanceNode.tcc
          tcc/ForestPredictorNode.tcc
          tcc/L2NormNode.tcc
          tcc/MatrixVectorProductNode.tcc
