fixed cmake error

--- a/interfaces/python/CMakeLists.txt
+++ b/interfaces/python/CMakeLists.txt
@@ -22,47 +22,49 @@ include_directories(${PYTHON_INCLUDE_PATH})
 generate_interface(python ${CMAKE_CURRENT_SOURCE_DIR} ${PYTHON_LIBRARIES} "" ${PYTHON_INCLUDE_PATH})
 set(CMAKE_SWIG_FLAGS ${CMAKE_SWIG_FLAGS})
 
-set(PYTHON_DIR ${CMAKE_BINARY_DIR}/interfaces/python)
-set(COMMON_DIR ${CMAKE_BINARY_DIR}/interfaces/common)
+if (_ELL_python)
+  set(PYTHON_DIR ${CMAKE_BINARY_DIR}/interfaces/python)
+  set(COMMON_DIR ${CMAKE_BINARY_DIR}/interfaces/common)
 
-# Copy the ELL headers and library to the right place in the package
+  # Copy the ELL headers and library to the right place in the package
 
-add_custom_command(TARGET _ELL_python 
+  add_custom_command(TARGET _ELL_python 
       POST_BUILD
       COMMAND ${CMAKE_COMMAND} -E copy ${PYTHON_DIR}/ELL.py ${PYTHON_DIR}/package/ell/ELL.py
   )
 
-file(GLOB PKGHDR RELATIVE ${CMAKE_SOURCE_DIR}/interfaces ${CMAKE_SOURCE_DIR}/interfaces/common/*.i ${CMAKE_SOURCE_DIR}/interfaces/common/include/*.h)
+  file(GLOB PKGHDR RELATIVE ${CMAKE_SOURCE_DIR}/interfaces ${CMAKE_SOURCE_DIR}/interfaces/common/*.i ${CMAKE_SOURCE_DIR}/interfaces/common/include/*.h)
 
-foreach(hdr ${PKGHDR})
+  foreach(hdr ${PKGHDR})
+    add_custom_command(TARGET _ELL_python 
+        POST_BUILD
+        COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_SOURCE_DIR}/interfaces/${hdr} ${CMAKE_BINARY_DIR}/interfaces/python/package/ell/headers/${hdr}
+    )
+  endforeach()
+
+  set(DEPLOYDIR ${CMAKE_BINARY_DIR}/interfaces/python/package/ell/deploy)
+
   add_custom_command(TARGET _ELL_python 
       POST_BUILD
-      COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_SOURCE_DIR}/interfaces/${hdr} ${CMAKE_BINARY_DIR}/interfaces/python/package/ell/headers/${hdr}
+      COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_SOURCE_DIR}/CMake/OpenBLASSetup.cmake ${DEPLOYDIR}/OpenBLASSetup.cmake
+      COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_SOURCE_DIR}/interfaces/common/include/CallbackInterface.h ${DEPLOYDIR}/include/CallbackInterface.h
+      COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_SOURCE_DIR}/libraries/emitters/include/ClockInterface.h ${DEPLOYDIR}/include/ClockInterface.h
+      COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_SOURCE_DIR}/interfaces/common/tcc/CallbackInterface.tcc ${DEPLOYDIR}/tcc/CallbackInterface.tcc
+      COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_SOURCE_DIR}/tools/wrap/templates/CMakeLists.python.txt.in ${DEPLOYDIR}/CMakeLists.python.txt.in
   )
-endforeach()
 
-set(DEPLOYDIR ${CMAKE_BINARY_DIR}/interfaces/python/package/ell/deploy)
-
-add_custom_command(TARGET _ELL_python 
-    POST_BUILD
-    COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_SOURCE_DIR}/CMake/OpenBLASSetup.cmake ${DEPLOYDIR}/OpenBLASSetup.cmake
-    COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_SOURCE_DIR}/interfaces/common/include/CallbackInterface.h ${DEPLOYDIR}/include/CallbackInterface.h
-    COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_SOURCE_DIR}/libraries/emitters/include/ClockInterface.h ${DEPLOYDIR}/include/ClockInterface.h
-    COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_SOURCE_DIR}/interfaces/common/tcc/CallbackInterface.tcc ${DEPLOYDIR}/tcc/CallbackInterface.tcc
-    COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_SOURCE_DIR}/tools/wrap/templates/CMakeLists.python.txt.in ${DEPLOYDIR}/CMakeLists.python.txt.in
-)
-
-if(WIN32)
-  set(binaries _ELL.exp _ELL.lib _ELL.pyd)
-  foreach(b ${binaries})
+  if(WIN32)
+    set(binaries _ELL.exp _ELL.lib _ELL.pyd)
+    foreach(b ${binaries})
+      add_custom_command(TARGET _ELL_python 
+            POST_BUILD
+            COMMAND ${CMAKE_COMMAND} -E copy ${PYTHON_DIR}/$<CONFIG>/${b} ${PYTHON_DIR}/package/ell/$<CONFIG>/${b}
+      )
+    endforeach()
+  else()
     add_custom_command(TARGET _ELL_python 
           POST_BUILD
-          COMMAND ${CMAKE_COMMAND} -E copy ${PYTHON_DIR}/$<CONFIG>/${b} ${PYTHON_DIR}/package/ell/$<CONFIG>/${b}
-      )
-  endforeach()
-else()
-  add_custom_command(TARGET _ELL_python 
-        POST_BUILD
-        COMMAND ${CMAKE_COMMAND} -E copy $<TARGET_FILE:_ELL_python> ${PYTHON_DIR}/package/ell/$<TARGET_FILE_NAME:_ELL_python>
+          COMMAND ${CMAKE_COMMAND} -E copy $<TARGET_FILE:_ELL_python> ${PYTHON_DIR}/package/ell/$<TARGET_FILE_NAME:_ELL_python>
     )
-endif()
+  endif()
+endif(_ELL_python)
