--- a/libraries/testing/CMakeLists.txt
+++ b/libraries/testing/CMakeLists.txt
@@ -14,6 +14,6 @@ source_group("tcc" FILES ${tcc})
 
 add_library(${library_name} ${src} ${include} ${tcc})
 target_include_directories(${library_name} PUBLIC include)
-target_link_libraries(${library_name})
+target_link_libraries(${library_name} utilities)
 
 set_property(TARGET ${library_name} PROPERTY FOLDER "libraries")
