Updates to underlying nodes of ProtoNNPredictorNode Contains the following updates:
* Story 928: Update SquaredEuclideanDistanceNode to refine into a smaller model
* Story 927: UnaryOperationsNode should support compiling and computing for all operation types
* Story 926: Add support for squaring in UnaryOperationsNodes
* Story 889: Add refinement capabilities to L2NormNode

--- a/libraries/nodes/CMakeLists.txt
+++ b/libraries/nodes/CMakeLists.txt
@@ -2,9 +2,10 @@
 # cmake file
 #
 
-set (library_name nodes)
+set(library_name nodes)
 
-set (src src/ActivationLayerNode.cpp
+set(src
+  src/ActivationLayerNode.cpp
   src/BatchNormalizationLayerNode.cpp
   src/BiasLayerNode.cpp
   src/BinaryConvolutionalLayerNode.cpp
@@ -20,97 +21,113 @@ set (src src/ActivationLayerNode.cpp
   src/PoolingLayerNode.cpp
   src/ScalingLayerNode.cpp
   src/SingleElementThresholdNode.cpp
-  src/SoftmaxLayerNode.cpp)
+  src/SoftmaxLayerNode.cpp
+)
 
-set (include 
-  include/AccumulatorNode.h
-  include/ActivationLayerNode.h
-  include/BatchNormalizationLayerNode.h
-  include/BiasLayerNode.h
-  include/BinaryConvolutionalLayerNode.h
-  include/BinaryFunctionNode.h
-  include/BinaryOperationNode.h
-  include/BinaryPredicateNode.h
-  include/BroadcastFunctionNode.h
-  include/ConstantNode.h
-  include/ConvolutionalLayerNode.h
-  include/DebugSinkNode.h
-  include/DelayNode.h
-  include/DemultiplexerNode.h
-  include/DiagonalConvolutionNode.h
-  include/DotProductNode.h
-  include/DTWDistanceNode.h
-  include/ExtremalValueNode.h
-  include/ForestPredictorNode.h
-  include/FullyConnectedLayerNode.h
-  include/IRNode.h
-  include/LinearPredictorNode.h
-  include/L2NormNode.h
-  include/MovingAverageNode.h
-  include/MatrixMatrixMultiplyNode.h
-  include/MatrixVectorMultiplyNode.h
-  include/MatrixVectorProductNode.h
-  include/MovingVarianceNode.h
-  include/MultiplexerNode.h
-  include/NeuralNetworkLayerNode.h
-  include/NeuralNetworkPredictorNode.h
-  include/PoolingLayerNode.h
-  include/ProtoNNPredictorNode.h
-  include/ReceptiveFieldMatrixNode.h
-  include/ReorderDataNode.h
-  include/ScalingLayerNode.h
-  include/SingleElementThresholdNode.h
-  include/SinkNode.h
-  include/SoftmaxLayerNode.h
-  include/SourceNode.h
-  include/SquaredEuclideanDistanceNode.h
-  include/SumNode.h
-  include/TypeCastNode.h
-  include/UnaryOperationNode.h
-  include/ValueSelectorNode.h)
+set(include
+    include/AccumulatorNode.h
+    include/ActivationLayerNode.h
+    include/BatchNormalizationLayerNode.h
+    include/BiasLayerNode.h
+    include/BinaryConvolutionalLayerNode.h
+    include/BinaryFunctionNode.h
+    include/BinaryOperationNode.h
+    include/BinaryPredicateNode.h
+    include/BroadcastFunctionNode.h
+    include/ConstantNode.h
+    include/ConvolutionalLayerNode.h
+    include/DebugSinkNode.h
+    include/DelayNode.h
+    include/DemultiplexerNode.h
+    include/DiagonalConvolutionNode.h
+    include/DotProductNode.h
+    include/DTWDistanceNode.h
+    include/ExtremalValueNode.h
+    include/ForestPredictorNode.h
+    include/FullyConnectedLayerNode.h
+    include/IRNode.h
+    include/LinearPredictorNode.h
+    include/L2NormSquaredNode.h
+    include/MovingAverageNode.h
+    include/MatrixMatrixMultiplyNode.h
+    include/MatrixVectorMultiplyNode.h
+    include/MatrixVectorProductNode.h
+    include/MovingVarianceNode.h
+    include/MultiplexerNode.h
+    include/NeuralNetworkLayerNode.h
+    include/NeuralNetworkPredictorNode.h
+    include/PoolingLayerNode.h
+    include/ProtoNNPredictorNode.h
+    include/ReceptiveFieldMatrixNode.h
+    include/ReorderDataNode.h
+    include/ScalingLayerNode.h
+    include/SingleElementThresholdNode.h
+    include/SinkNode.h
+    include/SoftmaxLayerNode.h
+    include/SourceNode.h
+    include/SquaredEuclideanDistanceNode.h
+    include/SumNode.h
+    include/TypeCastNode.h
+    include/UnaryOperationNode.h
+    include/ValueSelectorNode.h
+)
 
-set (tcc 
-  tcc/AccumulatorNode.tcc
-  tcc/BinaryFunctionNode.tcc
-  tcc/BinaryOperationNode.tcc
-  tcc/BinaryPredicateNode.tcc
-  tcc/BroadcastFunctionNode.tcc
-  tcc/ConstantNode.tcc
-  tcc/DebugSinkNode.tcc
-  tcc/DelayNode.tcc
-  tcc/DemultiplexerNode.tcc
-  tcc/DotProductNode.tcc
-  tcc/DTWDistanceNode.tcc
-  tcc/ExtremalValueNode.tcc
-  tcc/ForestPredictorNode.tcc
-  tcc/L2NormNode.tcc
-  tcc/LinearPredictorNode.tcc
-  tcc/MatrixVectorProductNode.tcc
-  tcc/MovingAverageNode.tcc
-  tcc/MovingVarianceNode.tcc
-  tcc/MultiplexerNode.tcc
-  tcc/NeuralNetworkLayerNode.tcc
-  tcc/NeuralNetworkPredictorNode.tcc         
-  tcc/ReceptiveFieldMatrixNode.tcc
-  tcc/ReorderDataNode.tcc
-  tcc/SinkNode.tcc
-  tcc/SourceNode.tcc
-  tcc/SumNode.tcc
-  tcc/TypeCastNode.tcc
-  tcc/UnaryOperationNode.tcc
-  tcc/ValueSelectorNode.tcc
-  tcc/SourceNode.tcc
-  tcc/SquaredEuclideanDistanceNode.tcc)
+set(tcc
+    tcc/AccumulatorNode.tcc
+    tcc/BinaryFunctionNode.tcc
+    tcc/BinaryOperationNode.tcc
+    tcc/BinaryPredicateNode.tcc
+    tcc/BroadcastFunctionNode.tcc
+    tcc/ConstantNode.tcc
+    tcc/DebugSinkNode.tcc
+    tcc/DelayNode.tcc
+    tcc/DemultiplexerNode.tcc
+    tcc/DotProductNode.tcc
+    tcc/DTWDistanceNode.tcc
+    tcc/ExtremalValueNode.tcc
+    tcc/ForestPredictorNode.tcc
+    tcc/L2NormSquaredNode.tcc
+    tcc/LinearPredictorNode.tcc
+    tcc/MatrixVectorProductNode.tcc
+    tcc/MovingAverageNode.tcc
+    tcc/MovingVarianceNode.tcc
+    tcc/MultiplexerNode.tcc
+    tcc/NeuralNetworkLayerNode.tcc
+    tcc/NeuralNetworkPredictorNode.tcc
+    tcc/ReceptiveFieldMatrixNode.tcc
+    tcc/ReorderDataNode.tcc
+    tcc/SinkNode.tcc
+    tcc/SourceNode.tcc
+    tcc/SumNode.tcc
+    tcc/TypeCastNode.tcc
+    tcc/UnaryOperationNode.tcc
+    tcc/ValueSelectorNode.tcc
+    tcc/SourceNode.tcc
+    tcc/SquaredEuclideanDistanceNode.tcc
+)
 
 source_group("src" FILES ${src})
 source_group("include" FILES ${include})
 source_group("tcc" FILES ${tcc})
 
 add_library(${library_name} ${src} ${include} ${tcc})
-target_include_directories(${library_name} PUBLIC include)
-target_link_libraries(${library_name} model predictors utilities)
+
+target_include_directories(${library_name}
+    PUBLIC
+        include
+)
+
+target_link_libraries(${library_name}
+    model
+    predictors
+    utilities
+)
+
 if(BLAS_FOUND)
-  target_compile_definitions(${library_name} PUBLIC USE_BLAS=1)
+    target_compile_definitions(${library_name}
+        PUBLIC
+            USE_BLAS=1
+    )
 endif()
 
 set_property(TARGET ${library_name} PROPERTY FOLDER "libraries")
@@ -119,27 +136,43 @@ set_property(TARGET ${library_name} PROPERTY FOLDER "libraries")
 # test project
 #
 
-set (test_name ${library_name}_test)
+set(test_name ${library_name}_test)
 
-set (test_src 
-  test/src/main.cpp 
-  test/src/NeuralNetworkLayerNodesTest.cpp
-  test/src/Nodes_test.cpp)
+set(test_src
+    test/src/main.cpp
+    test/src/NeuralNetworkLayerNodesTest.cpp
+    test/src/Nodes_test.cpp
+)
 
-set (test_include 
-  test/include/NeuralNetworkLayerNodesTest.h
-  test/include/Nodes_test.h)
-
-set (test_tcc 
-  test/tcc/Nodes_test.tcc)
+set(test_include
+    test/include/NeuralNetworkLayerNodesTest.h
+    test/include/Nodes_test.h
+)
 
 source_group("src" FILES ${test_src})
 source_group("include" FILES ${test_include})
-source_group("tcc" FILES ${test_tcc})
 
-add_executable(${test_name} ${test_src} ${test_include} ${test_tcc} ${include})
-target_include_directories(${test_name} PRIVATE test/include)
-target_link_libraries(${test_name} common math model nodes predictors testing utilities)
+add_executable(${test_name}
+    ${test_src}
+    ${test_include}
+    ${include}
+)
+
+target_include_directories(${test_name}
+    PRIVATE
+        test/include
+)
+
+target_link_libraries(${test_name}
+    common
+    math
+    model
+    nodes
+    predictors
+    testing
+    utilities
+)
+
 copy_shared_libraries(${test_name})
 
 set_property(TARGET ${test_name} PROPERTY FOLDER "tests")
